ssl-certification-example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
          # cert-manager.io/issuer: letsencrypt-prod

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.enttolog.shop
    secretName: quickstart-example-tls
  rules:
  - host: www.enttolog.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuard
            port:
              number: 80
